# AI-Enhanced-Minecraft

./: .gitignore  README.md  main.py  objects_id.py  requirements.txt  screen_stream.py  windowcapture.py
.github/workflows/: codeql.yml
ai-enchanced-minecraft-bringup/: CMakeLists.txt  package.xml
ai_enchanced_minecraft_bringup/: CMakeLists.txt  package.xml
ai_enhanced_minecraft_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ai_enhanced_minecraft_bringup/ai_enhanced_minecraft_bringup/: actions_api.py  capture_keys.py  fabric_api.py  get_inventory.py  image_api.py  inventory_api.py  listener.py  pose_api.py  publisher.py
ai_enhanced_minecraft_messages/: CMakeLists.txt  package.xml
ai_enhanced_minecraft_messages/msg/: Actions.msg  Inventory.msg  KeyStrokes.msg  Pose.msg  Slot.msg
ai_enhanced_minecraft_tasks/: package.xml  setup.cfg  setup.py
ai_enhanced_minecraft_tasks/ai_enhanced_minecraft_tasks/: create_statistics.py  generate_datasets.py  model_train.py
ai_enhanced_minecraft_tasks/ai_enhanced_minecraft_tasks/loss_functions/: key_presses_loss.py
ai_enhanced_minecraft_tasks/ai_enhanced_minecraft_tasks/models/: image_2_keys.py
ai_enhanced_minecraft_tasks/ai_enhanced_minecraft_tasks/src/: dataset.py  visualization.py
ai_enhanced_minecraft_tasks/launch/: generate_dataset.launch.py
ai_enhanced_minecraft_tasks/models/: image_2_keys.py
