<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ai_enhanced_minecraft_bringup</name>
  <version>1.0.0</version>
  <description>This repository serves as a comprehensive resource for developers and Minecraft enthusiasts interested in exploring the capabilities of AI-controlled players within the game.</description>
  <maintainer email="andref@ua.pt">andre</maintainer>
  <license>GPL</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
